Fix picker year select size. The year was getting cut off

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -677,6 +677,9 @@ main.event-questions {
 .picker__select--month, .picker__select--year {
   padding: .2em;
 }
+.picker__select--year {
+  width: 90px;
+}
 pick-a-date, pick-a-time {
   .add-on:not(+ .form-control[disabled]){
     cursor: pointer;
